# Hand-I

./: README.md  env.yml  pyproject.toml
handi/: config.py  main.py  types.py
handi/data/: utils.py
handi/interface/: interface.py
handi/io/: camera.py
handi/models/: mediapipe_interface.py
src/: main.py
src/handi/: config.py  types.py
src/handi/interface/: interface.py
src/handi/io/: camera.py
src/handi/models/: gesture_classifier.py  mediapipe_interface.py
src/handi/models/pretrained/: gestures.json
src/handi/visualization/: landmark_visualizer.py
